samples/_failures_safe/1761004988_b5a87f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_053b65f1.c: In function ‘main’:
./samples/SAFE/__tmp_053b65f1.c:180:9: error: expected expression at end of input
  180 |         if (sscanf(input, "%d", &
      |         ^~
./samples/SAFE/__tmp_053b65f1.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_053b65f1.c:180:9: error: expected declaration or statement at end of input
